--- a/dev-static/index.html
+++ b/dev-static/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <title>Isomorphic Application - dev</title>
 <div id="root"></div>
+<script>window.__INITIAL_STATE__ = [];</script>
 <script src="/public/bundle.js"></script>
